--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
@@ -50,7 +50,7 @@
       </div>
       <!-- Imagem à direita -->
       <div class="col-md-6 d-none d-md-block">
-        <img src="/img_svg.svg" alt="Imagem" class="img-fluid responsive-image">
+        <img src="img_svg.svg" alt="Imagem" class="img-fluid responsive-image">
       </div>
     </div>
   </div>
@@ -112,7 +112,7 @@
     <div class="row align-items-center">
       <!-- Imagem à direita -->
       <div class="col-md-6">
-        <img src="/sobre.svg" alt="Imagem Sobre Nós" class="img-fluid">
+        <img src="sobre.svg" alt="Imagem Sobre Nós" class="img-fluid">
       </div>
       <!-- Texto à esquerda -->
       <div class="col-md-6">
