--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
   <!-- Scripts Bootstrap e JavaScript -->
   <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="/script.js"></script>
+  <script src="script.js"></script>
   
 </body>
 </html>
