--- a/index.html
+++ b/index.html
@@ -250,8 +250,8 @@
   </div>
  <!-- Footer - Início -->
  <footer class="bg-light text-center py-3">
-  <p class="mb-0">&copy; 2024 Seu Nome. Todos os direitos reservados.</p>
-  <p class="mb-0">Desenvolvido por <a href="#" style="text-decoration: none;">VSS Tecnologia</a></p>
+  <p class="mb-0">&copy; 2024. Todos os direitos reservados.</p>
+  <p class="mb-0">Desenvolvido por <a href="https://dev-braga.github.io/page_vss/" style="text-decoration: none;">VSS Tecnologia</a></p>
 </footer>
 <!-- Footer - Fim -->
   <!-- Scripts Bootstrap e JavaScript -->
